# wlhs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Setup.hs  flake.nix  wlhs-bindings.cabal
src/PIXMAN/: Pixman.hsc
src/Pixman/Types/: Region.hsc
src/Time/: Time.hsc
src/WL/: Client.hs  Global.hs  Keyboard.hsc  ServerCore.hsc  ServerProtocol.hs  ServerProtocol.hsc  Utils.hsc  Version.hs
src/WLR/: Backend.hsc  Version.hs
src/WLR/Render/: Allocator.hsc  DrmFormatSet.hsc  Interface.hs-boot  Interface.hsc  Renderer.hsc  Swapchain.hsc  Texture.hsc
src/WLR/Types/: Buffer.hs-boot  Buffer.hsc  Compositor.hsc  DamageRing.hsc  DataDevice.hs-boot  DataDevice.hsc  InputDevice.hsc  Keyboard.hs-boot  Keyboard.hsc  KeyboardGroup.hsc  Output.hsc  OutputLayer.hsc  Pointer.hsc  PrimarySelection.hsc  Seat.hsc
src/WLR/Util/: Addon.hsc  Box.hsc  Edges.hsc  Log.hsc  Time.hsc
utils/templates/: Pointer.hsc.jinja  macros.jinja  render.py  runginger.hs
