cabal-version:   3.0
name:            wlhs-bindings
version:         0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      brad.neimann@hotmail.com
author:          Brad Neimann
tested-with:     ghc ==9.4.8
synopsis:        Bindings to wlroots (and libwayland)
category:        Graphics
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        WL.ServerCore
        WL.ServerProtocol
        WL.Utils
        WL.Version
        WLR.Backend
        WLR.Render.Allocator
        WLR.Render.DrmFormatSet
        WLR.Render.Renderer
        WLR.Types.Buffer
        WLR.Types.InputDevice
        WLR.Types.Pointer
        WLR.Util.Addon
        WLR.Util.Box
        WLR.Util.Edges
        WLR.Version

    pkgconfig-depends:  wlroots ==0.17.1, wayland-server
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: CApiFFI
    ghc-options:        -Wall -fno-show-valid-hole-fits -optc -Wno-discarded-qualifiers
    build-depends:      base >=4.16.4.0 && <5
