cabal-version:   3.0
name:            wlhs-bindings
version:         0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      brad.neimann@hotmail.com
author:          Brad Neimann
tested-with:     ghc ==9.4.8
synopsis:        Bindings to wlroots (and libwayland)
category:        Graphics
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
    setup-depends:
        base >=4.16.4.0 && <5,
        Cabal >=3.10.1.0 && <3.11,
        directory >=1.3 && <1.4,
        text >=1.2 && <2.2,

library
    exposed-modules:
        PIXMAN.Pixman
        WL.Keyboard
        WL.ServerCore
        WL.ServerProtocol
        WL.Utils
        WL.Global
        WL.Version
        WL.Client
        WLR.Backend
        WLR.Types.DataDevice
        WLR.Render.Allocator
        WLR.Render.DrmFormatSet
        WLR.Render.Interface
        WLR.Render.Renderer
        WLR.Render.Swapchain
        WLR.Render.Texture
        WLR.Types.Compositor
        WLR.Types.DamageRing
        WLR.Types.Buffer
        WLR.Types.InputDevice
        WLR.Types.Keyboard
        WLR.Types.KeyboardGroup
        WLR.Types.PrimarySelection
        WLR.Types.Output
        WLR.Types.OutputLayer
        WLR.Types.Pointer
        WLR.Types.Seat
        WLR.Util.Addon
        WLR.Util.Box
        WLR.Util.Edges
        WLR.Util.Log
        WLR.Util.Time
        WLR.Version

    pkgconfig-depends:  wlroots ==0.17.1, wayland-server, pixman-1
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: CApiFFI
    ghc-options:
        -Wall -fno-show-valid-hole-fits -optc -Wno-discarded-qualifiers

    build-depends:      base >=4.16.4.0 && <5
